syntax = "proto3";

package arktwin.common.data;

import "scalapb/scalapb.proto";
import "validate/validate.proto";

message MachineTimestamp {
  option (scalapb.message).extends = "arktwin.common.data.MachineTimestampTrait";
  option (scalapb.message).companion_extends = "arktwin.common.data.MachineTimestampCompanionTrait";
  int64 seconds = 1;
  int32 nanos = 2 [(validate.rules).int32 = {gte: 0, lte: 999999999}];
}
